--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
-                    <li><a href="#about" class="smoothScroll">About</a></li>
-                    <li><a href="#gallery" class="smoothScroll">Gallery</a></li>
+                    <li><a href="#about" class="smoothScroll">Gallery</a></li>
                </ul>
           </div>
 
