--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
                <div class="col-md-12 col-sm-12">
                     <div class="copyright-text">
-                         <p>Copyright © 2021 <a href="https://elvira.media/" target="_blank" rel="noopener noreferrer">Elvira Media, LLC</a> ~ All rights reserved<br> Developed by <a href="https://abtinbidgoli.github.io/abe/" target="_blank" rel="noopener noreferrer">com.abtinbidgoli</a></p>
+                         <p>Copyright © 2021 <a href="https://elvira.media/" target="_blank" rel="noopener noreferrer">Elvira Media, LLC</a> ~ All Rights Reserved<br> Developed by <a href="https://abtinbidgoli.github.io/abe/" target="_blank" rel="noopener noreferrer">com.abtinbidgoli</a></p>
                     </div>
                </div>
                
