--- a/index.html
+++ b/index.html
@@ -222,22 +222,9 @@
                          <div class="team-item">
                               <img src="images/gma99.jpeg" class="img-responsive" alt="">
                          </div>
-                         <h3>Sandra Tomita</h3>
+                         <h3>Grandchildren</h3>
                     </div>
 
-                    <div class="col-md-4 col-sm-4 item">
-                         <div class="team-item">
-                              <img src="images/gma99.jpeg" class="img-responsive" alt="">
-                         </div>
-                         <h3>Sandra's Brother</h3>
-                    </div>
-
-                    <div class="col-md-4 col-sm-4 item">
-                         <div class="team-item">
-                              <img src="images/gma99.jpeg" class="img-responsive" alt="">
-                         </div>
-                         <h3>Sandra's Sister</h3>
-                    </div>
 
                </div>
 
