--- a/index.html
+++ b/index.html
@@ -86,10 +86,8 @@
                          <p>Feel free to download the pictures and videos below</p>
                          <ul class="section-btn">
                              <a href="images/gma100.jpeg" download="all" target="_blank" rel="noopener noreferrer"><span data-hover="Download All">Download All</span></a>
-                              
-                              <a href="images/gma99.jpeg" download="pics" target="_blank" rel="noopener noreferrer"><span data-hover="Download Pictures">Download Pictures</span></a>
-                              
-                              <a href="images/driveby.png" download="vids" target="_blank" rel="noopener noreferrer"><span data-hover="Download Videos">Download Videos</span></a>
+                             <a href="images/driveby.png" download="vids" target="_blank" rel="noopener noreferrer"><span data-hover="Download Video">Download Video</span></a> 
+                             <a href="images/gma99.jpeg" download="pics" target="_blank" rel="noopener noreferrer"><span data-hover="Download Pictures">Download Pictures</span></a>
                          </ul>
                     </div>
                </div>
