--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <div class="col-md-6 col-sm-6">
                    <!-- PROJECT ITEM -->
                    <div class="project-item">
-                        <a href="images/IMG_5612.jpg" class="image-popup">
-                             <img src="images/IMG_5612.jpg" class="img-responsive" alt="">
+                        <a href="images/IMG_5623.jpg" class="image-popup">
+                             <img src="images/IMG_5623.jpg" class="img-responsive" alt="">
                         
                              <div class="project-overlay">
                                   <div class="project-info">
@@ -229,6 +229,8 @@
                          </a>
                     </div>
                </div>
+              
+              <!--Start Screenshots Here -->
 
                <div class="col-md-6 col-sm-6">
                     <!-- PROJECT ITEM -->
