--- a/index.html
+++ b/index.html
@@ -322,25 +322,33 @@
                <div class="col-md-offset-2 col-md-8 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="section-title">
-                         <h1>Meet Our Family</h1>
+                         <h1>Celebrating Grandma's Birthday!</h1>
                     </div>
                </div>
 
                <div class="clearfix"></div>
 
                <div id="owl-team" class="owl-carousel">
+                   
+                    <div class="col-md-4 col-sm-4 item">
+                         <div class="team-item">
+                              <img src="images/IMG_5628.JPG" class="img-responsive" alt="">
+                         </div>
+                         <h3>Grandma's 101st Birthday</h3>
+                    </div>
+                   
                     <div class="col-md-4 col-sm-4 item">
                          <div class="team-item">
                               <img src="images/gma100.jpeg" class="img-responsive" alt="">
                          </div>
-                         <h3>Grandma</h3>
+                         <h3>Grandma's 100th Birthday</h3>
                     </div>
 
                     <div class="col-md-4 col-sm-4 item">
                          <div class="team-item">
                               <img src="images/gma99.jpeg" class="img-responsive" alt="">
                          </div>
-                         <h3>Grandchildren</h3>
+                         <h3>Grandma's 99th Birthday</h3>
                     </div>
 
 
