--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
      <!-- Video -->
      <video playsinline controls autoplay loop muted>
-          <source src="videos/video.mp4" type="video/mp4">
+          <source src="videos/hero.mp4" type="video/mp4">
           Your browser does not support the video tag.
      </video>
 </section>
