--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                <div class="col-md-offset-2 col-md-8 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="section-title">
-                         <h1>Celebrating Grandma's Birthday!</h1>
+                         <h1>Celebrating Grandma's Birthdays!</h1>
                     </div>
                </div>
 
