--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta property="og:site" content="https://abtinbidgoli.github.io/gma" /> <!-- website link -->
         <meta property="og:title" content="Celebrating Grandma's 101st Birthday!"/> <!-- title shown in the actual shared post -->
         <meta property="og:description" content="Celebrating Grandma's 101st birthday with a drive by." /> <!-- description shown in the actual shared post -->
-        <meta property="og:image" content="images/gma99.jpeg" /> <!-- image link, make sure it's jpg -->
+        <meta property="og:image" content="images/IMG_5628.JPG" /> <!-- image link, make sure it's jpg -->
         <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
         <meta property="og:type" content="article" />
         
