--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                          <h1>Celebrating Grandma's 101st Birthday!</h1>
                          <p>Feel free to download the pictures and videos below</p>
                          <ul class="section-btn">
-                             <a href="images/gma100.jpeg" download="all" target="_blank" rel="noopener noreferrer"><span data-hover="Download All">Download All</span></a>
-                             <a href="images/driveby.png" download="vids" target="_blank" rel="noopener noreferrer"><span data-hover="Download Video">Download Video</span></a> 
-                             <a href="images/ElviraMediaGrandma101BDay.zip" download="Elvira Media Grandma 101 BDay Pics" target="_blank" rel="noopener noreferrer"><span data-hover="Download Pictures">Download Pictures</span></a>
+                             <a href="images/gma100.jpeg" download="Elvira Media Grandma 101 BDay All" target="_blank" rel="noopener noreferrer"><span data-hover="Download All">Download All</span></a>
+                             <a href="images/driveby.png" download="Elvira Media Grandma 101 BDay Vids" target="_blank" rel="noopener noreferrer"><span data-hover="Download Video">Download Video</span></a> 
+                             <a href="images/Elvira Media Grandma 101st BDay Pics.zip" download="Elvira Media Grandma 101 BDay Pics" target="_blank" rel="noopener noreferrer"><span data-hover="Download Pictures">Download Pictures</span></a>
                          </ul>
                     </div>
                </div>
