--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="about-info">
                          <h3>Grandma's 101st birthday!</h3>
                          <img src="images/driveby.png" class="img-responsive" alt="Grandma's 101st Birthday Drive By">
-                    </div>
+                    </div><br>
                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PA2mfiWr0jU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
 
