--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
      </div>
 
      <!-- Video -->
-     <video playsinline controls autoplay loop muted>
+     <video playsinline autoplay loop muted>
           <source src="videos/hero.mp4" type="video/mp4">
           Your browser does not support the video tag.
      </video>
@@ -115,7 +115,7 @@
                          <h3>Grandma's 101st birthday!</h3>
                          <img src="images/driveby.png" class="img-responsive" alt="Grandma's 101st Birthday Drive By">
                     </div><br>
-                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/PA2mfiWr0jU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   <iframe width="100%" height="315" src="https://www.youtube.com/embed/PA2mfiWr0jU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
 
           </div>
