--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-<title>Celebrating Grandma's 101st Birthday!</title>
+<title>Celebrating Furuyama Family ~ Grandma's 101st Birthday!</title>
 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -13,8 +13,8 @@
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
         <meta property="og:site_name" content="Celebrating Grandma's 101st birthday with a drive by." /> <!-- website name -->
         <meta property="og:site" content="https://abtinbidgoli.github.io/gma" /> <!-- website link -->
-        <meta property="og:title" content="Celebrating Grandma's 101st Birthday!"/> <!-- title shown in the actual shared post -->
-        <meta property="og:description" content="Celebrating Grandma's 101st birthday with a drive by." /> <!-- description shown in the actual shared post -->
+        <meta property="og:title" content="Celebrating Furuyama Family ~ Grandma's 101st Birthday!"/> <!-- title shown in the actual shared post -->
+        <meta property="og:description" content="Celebrating Furuyama Family ~ Grandma's 101st birthday with a drive by." /> <!-- description shown in the actual shared post -->
         <meta property="og:image" content="images/IMG_5628.JPG" /> <!-- image link, make sure it's jpg -->
         <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
         <meta property="og:type" content="article" />
@@ -82,7 +82,7 @@
 
                <div class="col-md-8 col-sm-12">
                     <div class="home-text">
-                         <h1>Celebrating Grandma's 101st Birthday!</h1>
+                         <h1>Celebrating Furuyama Family ~ Grandma's 101st Birthday!</h1>
                          <p>Feel free to download the pictures below</p>
                          <ul class="section-btn">
                              <!--
@@ -112,7 +112,7 @@
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="about-info">
-                         <h3>Grandma's 101st birthday!</h3>
+                         <h3>Furuyama Family ~ Grandma's 101st birthday!</h3>
                          <img src="images/driveby.png" class="img-responsive" alt="Grandma's 101st Birthday Drive By">
                     </div><br>
                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/PA2mfiWr0jU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -399,7 +399,7 @@
                <div class="col-md-offset-2 col-md-8 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="section-title">
-                         <h1>Celebrating Grandma's Birthdays!</h1>
+                         <h1>Celebrating Furuyama Family ~ Grandma's Birthdays!</h1>
                     </div>
                </div>
 
@@ -411,21 +411,21 @@
                          <div class="team-item">
                               <img src="images/IMG_5628.JPG" class="img-responsive" alt="">
                          </div>
-                         <h3>Grandma's 101st Birthday</h3>
+                         <h3>Furuyama Family ~ Grandma's 101st Birthday</h3>
                     </div>
                    
                     <div class="col-md-4 col-sm-4 item">
                          <div class="team-item">
                               <img src="images/gma100.jpeg" class="img-responsive" alt="">
                          </div>
-                         <h3>Grandma's 100th Birthday</h3>
+                         <h3>Furuyama Family ~ Grandma's 100th Birthday</h3>
                     </div>
 
                     <div class="col-md-4 col-sm-4 item">
                          <div class="team-item">
                               <img src="images/gma99.jpeg" class="img-responsive" alt="">
                          </div>
-                         <h3>Grandma's 99th Birthday</h3>
+                         <h3>Furuyama Family ~ Grandma's 99th Birthday</h3>
                     </div>
 
 
