--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
                          <ul class="section-btn">
                              <!--
                              <a href="images/gma100.jpeg" download="Elvira Media Grandma 101 BDay All" target="_blank" rel="noopener noreferrer"><span data-hover="Download All">Download All</span></a>
-                             <a href="images/driveby.png" download="Elvira Media Grandma 101 BDay Vids" target="_blank" rel="noopener noreferrer"><span data-hover="Download Video">Download Video</span></a> 
                              -->
+                               <a href="https://drive.google.com/file/d/1tpEEQ-Js43jzZW0jeAqgtmQ0cwEF67yj/view?usp=sharing" download="Elvira Media Grandma 101 BDay Vid" target="_blank" rel="noopener noreferrer"><span data-hover="Download Video">Download Video</span></a> 
+                             
                              <a href="images/Elvira Media Grandma 101st BDay Pics.zip" download="Elvira Media Grandma 101 BDay Pics" target="_blank" rel="noopener noreferrer"><span data-hover="Download Pictures">Download Pictures</span></a>
                          </ul>
                     </div>
@@ -115,7 +116,7 @@
                          <h3>Furuyama Family ~ Grandma's 101st birthday!</h3>
                          <img src="images/driveby.png" class="img-responsive" alt="Grandma's 101st Birthday Drive By">
                     </div><br>
-                   <iframe width="100%" height="315" src="https://www.youtube.com/watch?v=9A1DBsObiPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   <iframe width="100%" height="315" src="https://www.youtube.com/embed/9A1DBsObiPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </div>
 
           </div>
