--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home" class="smoothScroll">Home</a></li>
-                    <li><a href="#about" class="smoothScroll">Gallery</a></li>
+                    <li><a href="#gallery" class="smoothScroll">Gallery</a></li>
                </ul>
           </div>
 
@@ -107,7 +107,7 @@
 
 
 <!-- ABOUT -->
-<section id="about" class="parallax-section">
+<section id="gallery" class="parallax-section">
      <div class="container">
           <div class="row">
 
@@ -126,7 +126,7 @@
 
 
 <!-- PROJECT -->
-<section id="gallery" class="parallax-section">
+<section id="pics" class="parallax-section">
      <div class="container">
           <div class="row">
               <br>
